# data-quality

./: 404.html  README.md  index.html  mkdocs.yml  my_duckdb.db  objects.inv  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  etl.py  schemas.py
docs/: index.md  pandera.md
exemples/: exemple00.py  exemple01.py  exemple02.py  exemple03_ref_exemple00.py  exemple04.py
pandera/: index.html
search/: search_index.json
sql/: insert_wrong_values_into_tabela_bronze.sql  insert_wrong_values_into_tabela_bronze_email.sql  sql_setup.sql
tests/: test_database.py  test_dump.py  test_etl.py
